--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  shared_preferences: ^2.0.15
+  http: ^0.13.4
   cupertino_icons: ^1.0.2
+  auto_size_text: ^3.0.0
   provider: ^6.0.5
   intl: ^0.18.0
   get_it: ^7.2.0
