--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,17 @@ dependencies:
   intl: ^0.18.0
   get_it: ^7.2.0
   smooth_page_indicator: ^1.1.0
-
+  video_player: ^2.7.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.3.3
+
+flutter_native_splash:
+  color: "#000000"
 
 flutter:
   uses-material-design: true
